--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.0.1",
     "mongodb": "^3.6.9",
     "next": "10.2.3",
     "react": "17.0.2",
